# CompareIt

./: .gitignore  Cargo.toml  DETAILS.md  DEVELOPMENT.md  GEMINI_UPDATES_01222026.md  GEMINI_UPDATES_01262026.md  INFOSEC_REVIEW_01272026.md  OPENCODE_REVIEW.md  README.md  REFACTOR_PLAN.md  UI_IMPLEMENTATION_PLAN.md  UPDATES_01262026.md  build_errors.txt  check_output.txt  package-lock.json  package.json
docs/: DEEP_LOGIC-REVIEW.md  NEW_ALGORITHMS.md  OPENCODE_REVIEW_01212026.md  SRC_FILE_SUMMARY.md
results/: compare_20260114_153709_report.html
results/artifacts_20260114_153709/mismatches/: 6a79ba56dbe7af33_e7d8e56a35f79692.json
src/: compare_structured.rs  compare_text.rs  export.rs  fingerprint.rs  index.rs  lib.rs  main.rs  match_files.rs  report.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
test_explicit_output/: report.html
test_explicit_output_2/: report.html
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/scripts/: generate-icon.cjs  generate-icon.js
ui/src/: App.tsx  index.css
