[package]
name = "compareit-ui"
version = "0.1.0"
description = "CompareIt Desktop UI - Local file comparison tool"
authors = ["CompareIt Team"]
edition = "2021"

# Using default lib target

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Import the CompareIt core library from parent
compare_it = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
